[package]
name = "fear-and-hunger"
version = "0.1.0"
edition = "2021"
publish = ["crates-io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
dialoguer = "0.11.0"
rand = "0.8.5"
tokio = { version = "1.38.0", features = ["full"] }
