[package]
name = "fear-and-hunger"
version = "2.0.1"
edition = "2024"
publish = ["crates-io"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.38", features = ["derive"] }
rand = "0.9.1"
tokio = { version = "1.45.0", features = ["full"] }
